# kiwi-os

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  migrate-fetch.ps1
apps/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/adapters/: github.py  weather.py
apps/api/app/core/: auth_deps.py  cache.py  config.py  database.py  file_logging.py  rate_limit.py  redis.py  security.py
apps/api/app/middleware/: log_errors.py
apps/api/app/models/: __init__.py  application.py  pomodoro_preference.py  system_log.py  task.py  time_entry.py  user_preference.py
apps/api/app/routers/: applications.py  auth.py  github.py  health.py  pomodoro.py  portfolio.py  portfolio_public.py  rss.py  settings.py  settings_data.py  stats.py  tasks.py  time_entries.py  weather.py
apps/api/app/schemas/: application.py  github.py  pomodoro_preference.py  stats.py  system_log.py  task.py  time_entry.py  user_preference.py  weather.py
apps/api/app/services/: auth_service.py  finance_stats_service.py  github.py  rss_service.py  subscription_service.py  system_logger.py  upload_service.py  weather.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2cf102f64616_add_tasks_table.py  (+8 more)
apps/api/scripts/: seed_applications.py  seed_finance_categories.py
apps/api/tests/: _auth_helper.py  test_auth.py  test_auth_enforcement.py  test_github.py  test_health.py  test_portfolio.py  test_rss.py  test_settings.py  test_settings_data.py  test_weather.py
(+119 files in other folders)
